@@ -39,6 +39,7 @@ PHP                                                                        NEWS
   options like '-1'). (Tony)
 - Fixed bug #35705 (strtotime() fails to parse soap date format without TZ).
   (Ilia)
+- Fixed bug #35699 (date() can't handle leap years before 1970). (Derick)
 - Fixed bug #35694 (Improved error message for invalid fetch mode). (Ilia)
 - Fixed bug #35692 (iconv_mime_decode() segmentation fault; with libiconv 
   only). (Tony)
